aws/playground/cloud-formation/test/ec2-instance-enhanced-v2.2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: "ECS Instance using cloudformation"

Parameters: 
  serverType:
    Description: "EC2 Server Type"
    Type: String
    Default: "LinuxServer"
    AllowedValues:
      - "LinuxServer"
      - "LinuxWebServer"
  instanceType:
    Description: "EC2 Instance Type"
    Type: String
    Default: "t3.micro"
    AllowedValues:
      - "t3.micro"
      - "t3.small"
  vpcId:
    Description: "EC2 VPC ID"
    Type: String
    Default: "vpc-05da245b4e604a44c"
  keyPairName:
    Description: "EC2 KeyPair Name"
    Type: String
    Default: "aws-trn-2025"
  
Mappings:
  ec2AMI:
    LinuxServer:
      amiId: ami-0341d95f75f311023
    LinuxWebServer:
      amiId: ami-0c2bc33a5e96faa84

Conditions:
  isLinuxWebServer: !Equals 
    - !Ref serverType
    - "LinuxWebServer"

Resources: 
  ec2Instance1:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings: 
        - DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: 8
      ImageId: 
        Fn::FindInMap: 
          - ec2AMI
          - !Ref serverType
          - amiId
      InstanceType: !Ref instanceType
      KeyName: !Ref keyPairName
      SecurityGroupIds: 
        - !GetAtt ec2SecurityGroup1.GroupId
        - !If [isLinuxWebServer, !GetAtt ec2WebSecurityGroup1.GroupId, !Ref "AWS::NoValue"]
        
  ec2SecurityGroup1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "CFN Linux Server Security Group"
      GroupName: "cfnLinuxSecGroup1"
      SecurityGroupEgress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow all outbound"
          FromPort: -1
          IpProtocol: "-1"
          ToPort: -1
      SecurityGroupIngress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow SSH"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
      VpcId: !Ref vpcId

  ec2WebSecurityGroup1:
    Type: AWS::EC2::SecurityGroup
    Condition: isLinuxWebServer
    Properties:
      GroupDescription: "CFN Web Linux Server Security Group"
      GroupName: "cfnLinuxWebSecGroup1"
      SecurityGroupEgress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow all outbound"
          FromPort: -1
          IpProtocol: "-1"
          ToPort: -1
      SecurityGroupIngress: 
        - CidrIp: "0.0.0.0/0"
          Description: "Allow HTTP"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
      VpcId: !Ref vpcId
