aws/playground/cloud-formation/test/ec2-instance-v1-1.yml
AWSTemplateFormatVersion: 2010-09-09
Description: "ECS Instance using cloudformation"

Parameters: 
  amiId:
    Description: "EC2 AMI ID"
    Type: String
    Default: ami-0e1d35993cb249cee
  instanceType:
    Description: "EC2 Instance Type"
    Type: String
    Default: "t3.micro"
    AllowedValues:
      - "t3.micro"
      - "t3.small"
  securityGroupId:
    Description: "EC2 Security Group ID"
    Type: String
    Default: "sg-0b532bea9666b8656"
  keyPairName:
    Description: "EC2 KeyPair Name"
    Type: "String"
    Default: "aws-trn-2025-oregon"
  
Resources: 
  LogicalID:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings: 
        - DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: 8
      ImageId: !Ref amiId
      InstanceType: !Ref instanceType
      KeyName: !Ref keyPairName
      SecurityGroupIds: 
        - !Ref securityGroupId

ec2SecurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    GroupDescription: "CFN Linux Server Security Group" # Required 
    GroupName: "cfnLinuxSecGroup"
    SecurityGroupEgress: 
      - CidrIp: "0.0.0.0/0"
        Description: "Allow all outbound"
        FromPort: "-1"
        IpProtocol: "-1"
        ToPort: "-1"
    SecurityGroupIngress: 
      - CidrIp: "0.0.0.0/0"
        Description: "Allow HTTP"
        FromPort: "80"
        IpProtocol: "tcp"
        ToPort: "80"
      - CidrIp: 0.0.0.0/0
        Description: Allow SSH
        FromPort: "22"
        IpProtocol: tcp
        ToPort: "22"
    VpcId: "vpc-0773f132909fd8964"
